finally got multiple event submittion working, now need to get dynamic forms for formsets working

--- a/runkansas/templates/race/add_race.html
+++ b/runkansas/templates/race/add_race.html
@@ -1,8 +1,8 @@
 {% extends "site_base.html" %}
 
 {% block extra_head %}
-<script type="text/javascript" src="/site_media/static/js/jquery-1.4.2.min.js"></script>
-<script type="text/javascript" src="/site_media/static/js/dynamic-formset.js"></script>
+
+
 
 {% endblock %}
 
@@ -19,7 +19,7 @@
 			<hr \>
 			{% include "race/includes/forms/add_event_form.html" %}
 			<hr \>
-			{% include "race/includes/forms/add_distance_form.html" %}
+			{# {% include "race/includes/forms/add_distance_form.html" %} #}
 		</form>
 	</div>
 </div>
