--- a/runkansas/templates/idios/profile.html
+++ b/runkansas/templates/idios/profile.html
@@ -40,7 +40,7 @@
 		  <b>Completed races</b>:
 		    <ul>
 			{% for race in other_user.get_profile.completed_races %}
-			  <li><a href="{{ event.race.get_absolute_url }}">{{ event.name }}</a></li>
+			  <li><a href="{{ event.race.get_absolute_url }}">{{ event }}</a></li>
 			{% endfor %}
 		  </ul>
 		{% endif %}
