--- a/runkansas/templates/idios/base.html
+++ b/runkansas/templates/idios/base.html
@@ -7,6 +7,7 @@
 {% block subnav %}
     {% if user.is_authenticated %}
         <ul>
+            <li><a href="{% url profile_detail user.username %}ical">{% trans "Your Race Calendar" %}</a></li>
             <li><a href="{% url profile_detail user.username %} ">{% trans "Your Profile" %}</a></li>
             <li><a href="{% url profile_list %} ">{% trans "All Profiles" %}</a></li>
         </ul>
