--- a/runkansas/templates/race/add_race.html
+++ b/runkansas/templates/race/add_race.html
@@ -1,4 +1,4 @@
-{% extends "site_base.html" %}
+{% extends "race/race_base.html" %}
 
 {% block extra_head %}
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
