using race base now

--- a/runkansas/templates/race/race_archive_month.html
+++ b/runkansas/templates/race/race_archive_month.html
@@ -1,4 +1,4 @@
-{% extends "site_base.html" %}
+{% extends "race/race_base.html" %}
 
 {% block head_title %}Races for {{ month|date:"F" }}{% endblock %}
 {% block body %}
